# lixwi

./: .gitignore  README.md  checklist.md
backend/: .env.example  README.md  alembic.ini  checklist.md  create_tables.py  pyproject.toml  requirements.txt  structure-basic.txt  structure-db.md
backend/alembic/: env.py
backend/alembic/versions/: 079440e0a595_remove_chathistory_and_update_.py  0d6fd1a9678c_fix_chat_message_relationships.py  1ab640c1a58f_add_chat_messages_table.py  4f21bcf15314_remove_chathistory_model.py  4f42db921355_remove_chathistory_model.py  63fcb941a8c2_remove_chathistory_model.py  a663f07ffca7_remove_chathistory_model.py
backend/app/: main.py
backend/app/agents/: agent_manager.py  corrector_agent.py
backend/app/api/v1/: error_handlers.py  schemas.py
backend/app/core/: config.py  logging_config.py  memory.py  prompts.py  semantic_kernel.py
backend/app/db/: base.py  session.py
backend/app/db/crud/: __init__.py  chat_history.py  exercise.py  user.py
backend/app/db/models/: __init__.py  chat_history.py  exercise.py  user.py
backend/app/models/: chat.py
backend/app/plugins/: plugins_loader.py
backend/app/services/: exercise_generator.py  image_processing.py  llm_service.py
backend/app/utils/: validators.py
backend/tests/: conftest.py  test_endpoints.py  test_visualize.py
backend/tests/integration/: test_chat.py  test_chat_history.py  test_exercise.py  test_generate.py  test_upload.py  test_user.py  test_visualize.py
backend/tests/services/: test_exercise_generator.py
backend/tests/unit/: test_memory.py
(+30 files in other folders)
